grammars/Cymbol.g4
grammar Cymbol;

//Lexer
fragment NUMBER    : [0-9];
fragment LETTER    : [a-zA-Z];
fragment UNDERLINE : '_';

TYPEINT  : 'int';
TYPEFLOAT  : 'float';
TYPEBOOLEAN  : 'boolean';
TYPEVOID : 'void';
TYPESTRING : 'string';

IF     : 'if';
ELSE   : 'else';
RETURN : 'return';

LP        : '(';
RP        : ')';
COMMA     : ',';
SEMICOLON : ';';
LB        : '{';
RB        : '}';
QUOTE     : '"';

AS    : '=';
EQ    : '==';
NE    : '!=';
NOT   : '!';
GT    : '>';
LT    : '<';
GE    : '>=';
LE    : '<=';
MUL   : '*';
DIV   : '/';
PLUS  : '+';
MINUS : '-';
AND   : '&&';
OR    : '||';

INT : NUMBER+;
FLOAT: NUMBER+ '.' NUMBER+;
STRING: QUOTE (UNDERLINE | LETTER | NUMBER)* QUOTE;
BOOLEAN: 'true' | 'false';
ID  : (UNDERLINE | LETTER) (UNDERLINE | LETTER | NUMBER)*;

BLOCKCOMMENT : '/*' .*? '*/' -> skip;
LINECOMMENT  : '//' .*? '\n' -> skip;
WS           : [ \t\n\r]+ -> skip;

//Parser
fiile : (funcDecl | varDecl)+ EOF?
      ;

varDecl : tyype ID ('=' expr)? ';'
        ;

tyype : TYPEINT                                   #FormTypeInt
      | TYPEVOID                                  #FormTypeVoid
      | TYPEFLOAT                                 #FormTypeFloat
      | TYPESTRING                                #FormTypeString
      | TYPEBOOLEAN                               #FormTypeBoolean
      ;

funcDecl : tyype ID '(' paramTypeList? ')' block
         ;

paramTypeList : paramType (',' paramType)*
              ;

paramType : tyype ID
          ;

block : '{' stat* '}'
      ;

assignStat : ID '=' expr ';'
           ;

returnStat : 'return' expr? ';'
           ;

ifElseStat : ifStat (elseStat)?
           ;

ifElseExprStat : block 
               | ifElseStat
               | returnStat
               | assignStat
               | exprStat
               ;

exprStat : expr ';'
         ;

exprList : expr (',' expr)* 
         ;

ifStat : 'if' '(' expr ')' ifElseExprStat
       ;

elseStat : 'else' ifElseExprStat
         ;

stat : varDecl
     | ifElseStat
     | returnStat
     | assignStat
     | exprStat
     ;

expr : ID '(' exprList? ')'                      #FunctionCallExpr
     | op=('+' | '-') expr                       #SignedExpr
     | '!' expr                                  #NotExpr
     | expr op=('<' | '>' | '<=' | '>=') expr    #ComparisonExpr
     | expr op=('*' | '/') expr                  #MulDivExpr
     | expr op=('+' | '-') expr                  #AddSubExpr
     | expr op=('==' | '!=') expr                #EqExpr
     | BOOLEAN                                   #BooleanExpr
     | ID                                        #VarIdExpr
     | INT                                       #IntExpr
     | FLOAT                                     #FloatExpr
     | STRING                                    #StringExpr
     | '(' expr ')'                              #ParenExpr
     | expr op=('&&' | '||') expr                #BoolExpr
     ;
